[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/main/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/main/Class.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.803922, 0.0392157, 0.0392157, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timers" type="Node2D" parent="."]

[node name="DashDuration" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="Class" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="Timers/DashDuration" to="." method="_on_DashDuration_timeout"]
[connection signal="timeout" from="Timers/DashCooldown" to="." method="_on_DashCooldown_timeout"]
